@@ -1,6 +1,5 @@
 package net.minecraft.world.level.levelgen.feature.trunkplacers;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.List;
@@ -39,23 +38,23 @@ public class PoplarTrunkPlacer extends TrunkPlacer {
 
       for(int y = 0; y < treeHeight; ++y) {
          this.placeLog(level, trunkSetter, random, origin.above(y), tree);
-         List<Direction> getListOfDirections = getRandomBranchDirection(random);
+         List<Direction> directions = getShuffledBranchDirections(random);
          if (trunkHeightUpToFoliageBranches - 1 == y) {
             for(int x = 0; x < this.branchAmount.sample(random); ++x) {
-               Direction branchDirection = (Direction)getListOfDirections.get(x);
+               Direction branchDirection = (Direction)directions.get(x);
                this.placeLog(level, trunkSetter, random, origin.above(y).relative((Direction)branchDirection, 1), tree, getSidewaysStateModifier(branchDirection));
             }
          }
       }
 
-      return ImmutableList.of(new FoliagePlacer.FoliageAttachment(origin.above(trunkHeightUpToFoliageBranches), 0, false));
+      return List.of(new FoliagePlacer.FoliageAttachment(origin.above(trunkHeightUpToFoliageBranches), 0, false));
    }
 
    private static Function<BlockState, BlockState> getSidewaysStateModifier(final Direction branchDirection) {
       return (state) -> (BlockState)state.trySetValue(RotatedPillarBlock.AXIS, branchDirection.getAxis());
    }
 
-   private static List<Direction> getRandomBranchDirection(final RandomSource random) {
+   private static List<Direction> getShuffledBranchDirections(final RandomSource random) {
       return (List)Direction.allShuffled(random).stream().filter((direction) -> !direction.getAxis().isVertical()).collect(Collectors.toList());
    }
 }
